--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
 	"typescript.tsc.autoDetect": "off",
 	"files.exclude": {
-		"C:/Users/chanypark/Documents/dev/unreal-rxcpp/.git": true,
-		"C:/Users/chanypark/Documents/dev/unreal-rxcpp/.vscode": true,
-		"C:/Users/chanypark/Documents/dev/unreal-rxcpp/Intermediate": true,
-		"C:/Users/chanypark/Documents/dev/unreal-rxcpp/Saved": true
+		"**/.git": true,
+		"**/.vscode": false,
+		"**/Intermediate": true,
+		"**/Saved": true
 	},
 	"files.associations": {
 		"chrono": "cpp"
