Applies code formatting and adds RxCpp Log category

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
 	"files.associations": {
 		"chrono": "cpp",
 		"*.rh": "cpp",
-		"resumable": "cpp"
+		"resumable": "cpp",
+		"mutex": "cpp",
+		"future": "cpp",
+		"system_error": "cpp"
 	}
 }
